--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                     <label for="kata-kunci">Kata Kunci (pisahkan dengan koma)</label>
                     <input type="text" id="kata-kunci" required>
                 </div> -->
+                <button type="button" id="batal-tambah-ujian" class="btn-cancel">Batal</button>
                 <button type="submit" class="btn-submit">Simpan</button>
             </form>
         </div>
@@ -188,7 +189,7 @@
                     <input type="text" id="update-token-ujian" required />
                 </div>
                 <button type="button" id="batal-ubah-ujian" class="btn-cancel">Batal</button>
-                <button type="submit" id="proses-ubah-ujian" class="btn-submit">Edit</button>
+                <button type="submit" id="proses-ubah-ujian" class="btn-submit">Ubah</button>
             </form>
         </div>
     </div>
@@ -227,6 +228,8 @@
                     <label for="nasihat">feedback nilai kurang (jika nilai 0 - 60)</label>
                     <input type="text" id="nasihat" required>
                 </div>
+
+                <button type="button" id="batal-tambah-soal" class="btn-cancel">Batal</button>
                 <button type="submit" class="btn-submit">Simpan</button>
             </form>
         </div>
@@ -267,7 +270,7 @@
                     <input class="Update" type="text" id="nasihat-update" required>
                 </div>
                 <div>
-                    <button type="button" id="batal-ubah" class="btn-cancel">Batal</button>
+                    <button type="button" id="batal-ubah" class="btn-cancel">Tutup</button>
                     <button type="submit" id="ubah-soal" class="btn-submit">Ubah</button>
                 </div>
             </form>
