--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
         
         if(sessionStorage.getItem('guru-login') == undefined){
-          alert('login dahulu');
+          alert('Anda belum login, silakan login dahulu');
           document.location.href = "login.html"
         }
     </script>
