--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
         <button id="tambah-soal" class="fab" style="display: none;"><i class="fas fa-plus"></i></button>
         <button id="tambah-jawaban" class="fab" style="display: none;"><i class="fas fa-plus"></i></button>
 
+        <footer class="footer">
+            <p>PJOK Learning &copy; <span id="yf">2025</span> oleh Helmy Fauzi, S. Pd</p>
+        </footer>
+
         <!-- Modal-modals tetap sama seperti sebelumnya -->
         
         
